src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>PRM_Lead_Process</fullName>
        <description>PRM-ACN-63-Lead processes</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - No Opportunity</fullName>
        </values>
        <values>
            <fullName>Closed - Opportunity</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Closed-Rejected</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Not Started</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open - Unverified</fullName>
        </values>
        <values>
            <fullName>Open - Verified</fullName>
        </values>
        <values>
            <fullName>Under Review</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Started_date__c</fullName>
        <description>PEP-ACN-Custom date field &apos;Anticipated Start date&apos;</description>
        <label>Anticipated Started date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Territory__c</fullName>
        <description>CRM_MC_ESPSFDCQI-1288 -</description>
        <label>Business Territory</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallOpt_InDate__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>CallOpt InDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallOpt_InMethod__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>CallOpt InMethod</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website Form</fullName>
                </value>
                <value>
                    <fullName>Webinar Registration</fullName>
                </value>
                <value>
                    <fullName>Event List</fullName>
                </value>
                <value>
                    <fullName>Email Opt-in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Opt_Out_Method__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Call Opt Out Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email Opt-in</fullName>
                    <isActive>false</isActive>
                    <label>Email Opt-in</label>
                </value>
                <value>
                    <fullName>Event List</fullName>
                    <isActive>false</isActive>
                    <label>Event List</label>
                </value>
                <value>
                    <fullName>Event Upload</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Webinar Registration</fullName>
                    <isActive>false</isActive>
                    <label>Webinar Registration</label>
                </value>
                <value>
                    <fullName>Website Form</fullName>
                    <isActive>false</isActive>
                    <label>Website Form</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Out_Out_Date__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Call Out Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Opted In</fullName>
                </value>
                <value>
                    <fullName>Opted Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>PRM-ACN-PRM-70-Comment</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Description__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Comments / Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Local_Phone__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <inlineHelpText>Central Phone Number</inlineHelpText>
        <label>Company Local Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EBP</fullName>
                </value>
                <value>
                    <fullName>Large Pharma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consented_to_Marketing_Emails__c</fullName>
        <description>CRM-MC-ESPSFDCQI-390 - Used to identify if the lead has consented to marketing emails</description>
        <inlineHelpText>Used to identify if the lead has consented to marketing emails</inlineHelpText>
        <label>Consented to Marketing Emails</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consented_to_Marketing_Emails</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Email__c</fullName>
        <description>PRM-70 retrieve the created by email address</description>
        <formula>CreatedBy.Email</formula>
        <label>Created By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Profile__c</fullName>
        <description>PRM-65 get profile name of user creating lead</description>
        <formula>CreatedBy.Profile.Name</formula>
        <label>Created By Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSegment__c</fullName>
        <description>ESPSFDCQI-15573</description>
        <label>Customer Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Division__c</fullName>
        <label>Customer Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Degree</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Department Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_MailOpt_InDate__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Direct MailOpt InDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Direct_MailOpt_InMethod__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Direct MailOpt InMethod</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website Form</fullName>
                </value>
                <value>
                    <fullName>Webinar Registration</fullName>
                </value>
                <value>
                    <fullName>Event List</fullName>
                </value>
                <value>
                    <fullName>Email Opt-in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_MailOpt_OutDate__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Direct MailOpt OutDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Direct_MailOpt_OutMethod__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Direct MailOpt OutMethod</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email Opt-in</fullName>
                    <isActive>false</isActive>
                    <label>Email Opt-in</label>
                </value>
                <value>
                    <fullName>Event List</fullName>
                    <isActive>false</isActive>
                    <label>Event List</label>
                </value>
                <value>
                    <fullName>Event Upload</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Webinar Registration</fullName>
                    <isActive>false</isActive>
                    <label>Webinar Registration</label>
                </value>
                <value>
                    <fullName>Website Form</fullName>
                    <isActive>false</isActive>
                    <label>Website Form</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Mail_Status__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Direct Mail Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Opted In</fullName>
                </value>
                <value>
                    <fullName>Opted Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disposition_Date__c</fullName>
        <description>CRM-MC-ESPSFDCQI-409</description>
        <label>Disposition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <description>CRM-MC-ESPSFDCQI-409 - This field will store the value of the disposition made by sales and will then update the disposition field on the related contact.</description>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Not Accept</fullName>
                </value>
                <value>
                    <fullName>Marketing to Nurture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailOpt_InDate__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>EmailOpt InDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailOpt_InMethod__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>EmailOpt InMethod</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website Form</fullName>
                </value>
                <value>
                    <fullName>Webinar Registration</fullName>
                </value>
                <value>
                    <fullName>Event List</fullName>
                </value>
                <value>
                    <fullName>Email Opt-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Date__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Email Opt Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Method__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Email Opt Out Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email Opt-in</fullName>
                    <isActive>false</isActive>
                    <label>Email Opt-in</label>
                </value>
                <value>
                    <fullName>Email Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Event List</fullName>
                </value>
                <value>
                    <fullName>Event Upload</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Webinar Registration</fullName>
                </value>
                <value>
                    <fullName>Website Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Opted In</fullName>
                </value>
                <value>
                    <fullName>Opted Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Areas__c</fullName>
        <description>CRM_MC_ESPSFDCQI-1288 -</description>
        <label>Functional Areas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Corp Strategy &amp; Business Development</fullName>
                </value>
                <value>
                    <fullName>C Suite</fullName>
                </value>
                <value>
                    <fullName>Field Sales</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Procurement</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>General Management</fullName>
                </value>
                <value>
                    <fullName>Health Economics &amp; Outcomes Research</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Management</fullName>
                </value>
                <value>
                    <fullName>Managed Markets</fullName>
                </value>
                <value>
                    <fullName>Marketing Brand &amp; Product</fullName>
                </value>
                <value>
                    <fullName>Marketing Communications &amp; PR</fullName>
                </value>
                <value>
                    <fullName>Marketing Database</fullName>
                </value>
                <value>
                    <fullName>Marketing Digital</fullName>
                </value>
                <value>
                    <fullName>Marketing Operations</fullName>
                </value>
                <value>
                    <fullName>Marketing Other</fullName>
                </value>
                <value>
                    <fullName>Market Research</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Pricing and Market Access</fullName>
                </value>
                <value>
                    <fullName>Sales Management</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Bounceback_Date__c</fullName>
        <description>CRM-MC-ESPSFDCQI-390 - Populated by Eloqua when bouncebacks occur.</description>
        <label>Hard Bounceback Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IQVIA_Institute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>IQVIA Institute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IQVIA_Segmentation__c</fullName>
        <description>ESPSFDCQI-5082</description>
        <inlineHelpText>Segmentation Data For Inside Sales team to Improve targeting and Prospecting Efforts.</inlineHelpText>
        <label>IQVIA Segmentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <description>CRM-MC-ESPSFDCQI-390 - Used to capture the reason the lead is inactive.</description>
        <inlineHelpText>Used to capture the reason the lead is inactive.</inlineHelpText>
        <label>Inactive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inactive_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invalid_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-390</description>
        <label>Invalid Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_valid_website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-10078 - Validate Website on Lead</description>
        <label>Is valid website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1911 - Summarizes the seniority of the contact.</description>
        <inlineHelpText>Summarizes the seniority of the contact.</inlineHelpText>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Management</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Middle Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Executive</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Assistant</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Technology Officer</fullName>
                </value>
                <value>
                    <fullName>Clinical Research Associate (CRA)</fullName>
                </value>
                <value>
                    <fullName>Clinical Research Coordinator (CRC)</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>District Manager</fullName>
                </value>
                <value>
                    <fullName>Field User</fullName>
                </value>
                <value>
                    <fullName>HO User</fullName>
                </value>
                <value>
                    <fullName>IT Technician</fullName>
                </value>
                <value>
                    <fullName>Junior Developer</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Principle Investigator (PI)</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Executive</fullName>
                </value>
                <value>
                    <fullName>Senior Developer</fullName>
                </value>
                <value>
                    <fullName>Solution Consultant</fullName>
                </value>
                <value>
                    <fullName>Study Coordinator (SC)</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>PEP-ACN-PRM-63-Job Title</description>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic (Saudi Arabia)</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Chinese (Cantonese)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Mandarin)</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English-American</fullName>
                </value>
                <value>
                    <fullName>English-British</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Georgian</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Lebanese</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Portuguese-Brazilian</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Serbian</fullName>
                </value>
                <value>
                    <fullName>Slovak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Disposition_Date__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Last Disposition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Disposition__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Last Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Not Accept</fullName>
                </value>
                <value>
                    <fullName>MarketingtoNuture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Score_Image__c</fullName>
        <description>CRM-MC-ESPSFDCQI-393 - This field will lookup the appropriate image based on the lead score rating value</description>
        <formula>IMAGE( 
CASE( Lead_Score__c, 
&quot;A1&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baiA&quot;, 
&quot;A2&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baiF&quot;, 
&quot;A3&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baiK&quot;, 
&quot;A4&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baiP&quot;, 
&quot;B1&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baiU&quot;, 
&quot;B2&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baiZ&quot;, 
&quot;B3&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baie&quot;, 
&quot;B4&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baij&quot;, 
&quot;C1&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baio&quot;, 
&quot;C2&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000bait&quot;, 
&quot;C3&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baiy&quot;, 
&quot;C4&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baj3&quot;, 
&quot;D1&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000baj8&quot;, 
&quot;D2&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000bajD&quot;, 
&quot;D3&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000bajI&quot;, 
&quot;D4&quot;, &quot;/servlet/servlet.FileDownload?file=0156A000000bajN&quot;,&quot;&quot;), &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_PA__c</fullName>
        <description>ESPSFDCQI-17316</description>
        <label>Lead Score PA</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>CRM-MC-ESPSFDCQI-393 - This field will store lead score values and will be part of the marketing automation process of IQVIA. Information will be fed through Eloqua via an integration.,ESPSFDCQI-17316</description>
        <label>IQVIA Lead Score</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_Most_Recent_Detail__c</fullName>
        <description>CRM-MC-ESPSFDCQI-391</description>
        <label>Lead Source Detail - Most Recent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>